--- a/views/administrador2/navTop.pug
+++ b/views/administrador2/navTop.pug
@@ -1,8 +1,7 @@
 nav(class="navbar navbar-expand-lg bg-body-tertiary ")
-  - console.log("paka") 
   .container-fluid.d-flex.justify-content-between
    div.position-absolute.top-0.start-0
-    a.navbar-brand(href="/tecBioq") 
+    a.navbar-brand(href="/admins2") 
      img(src="/images/logo.jpg", alt="logo laboratorio ULP" class="logo ")
    div.logo  
    div.d-flex-flex-column  
@@ -26,18 +25,17 @@ nav(class="navbar navbar-expand-lg bg-body-tertiary ")
     div.collapse.navbar-collapse#navbarSupportedContent
      ul.navbar-nav.me-auto.mb-2.mb-lg-0
       li.nav-item.dropdown
-       a.nav-link.active.dropdown-toggle(aria-current="page" 
+       a.nav-link.active(aria-current="page" 
                                          href=`http://localhost:3000/admins2=${encodeURIComponent("Bioquímico")}`
                                          role="button" 
-                                         data-bs-toggle="dropdown" 
                                          aria-expanded="false"
-                                         ) Personal
- 
+                                         ) Registrar usuario
+      // 
        ul.dropdown-menu(aria-labelledby="navbarDropdown")
         li
-          a.dropdown-item(href=`http://localhost:3000/admins2?rol=${encodeURIComponent("Bioquímico")}`) Bioquímicos
+          a.dropdown-item(href=`http://localhost:3000/admins2/form?rol=${encodeURIComponent("Bioquímico")}`) Bioquímicos
         li
-          a.dropdown-item(href=`http://localhost:3000/admins2?rol=${encodeURIComponent("Técnico")}`) Técnicos
+          a.dropdown-item(href=`http://localhost:3000/admins2/form?rol=${encodeURIComponent("Técnico")}`) Técnicos
       li.nav-item
        a.nav-link(href="http://localhost:3000/admins2/muestras"
                                   aria-expanded="false"
