--- a/views/paginado.pug
+++ b/views/paginado.pug
@@ -1,15 +1,11 @@
 mixin paginado(href)
  //page viene del servidor
- //- page=parseInt(page)
- //- const paginas = Math.ceil(totalRegistros / limit); 
- //- let ultimaPag= group*PAGES_CANTIDADxGRUPO
- //- let primeraPag=ultimaPag-PAGES_CANTIDADxGRUPO+1
- //- console.log("primeraPag")
- //- console.log(primeraPag)
- //- console.log("segundaPag")
- //- console.log(ultimaPag)
- //- const grupos=Math.ceil(paginas/PAGES_CANTIDADxGRUPO)
- //- ultimaPag=ultimaPag>paginas?paginas:ultimaPag;
+ - page=parseInt(page)
+ - const paginas = Math.ceil(totalRegistros / limit); 
+ - let ultimaPag= group*PAGES_CANTIDADxGRUPO
+ - let primeraPag=ultimaPag-PAGES_CANTIDADxGRUPO+1
+ - const grupos=Math.ceil(paginas/PAGES_CANTIDADxGRUPO)
+ - ultimaPag=ultimaPag>paginas?paginas:ultimaPag;
  - finHref=href.includes('?') ? '&' : '?'
  nav(aria-label="Page navigation example")
    ul(class="pagination")
