--- a/views/tecBioq/inputSearch.pug
+++ b/views/tecBioq/inputSearch.pug
@@ -9,5 +9,9 @@ mixin inputSearch(action,placeholder,btn,href="#")
          //- para la query
          input(type="hidden" name="group" value=1)
          input(type="hidden" name="page" value=1)
-      div 
-       a(href=href class="btn btn-secondary btn-add"  role="button" type="button" )= btn
+         if queryString
+          input(type="hidden", name="tablas", value=queryString.tablas)
+          input(type="hidden", name="roles", value=queryString.roles)
+      if btn
+       div 
+        a(href=href class="btn btn-secondary btn-add"  role="button" type="button" )= btn
