--- a/views/administrador/form.pug
+++ b/views/administrador/form.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   - editarPaciente=false
-  include ./soloForm.pug
+  include ../forms/formPaciente.pug
+  +formPaciente("divForm",false,false,)
