--- a/views/administrador2/indexUsuario.pug
+++ b/views/administrador2/indexUsuario.pug
@@ -4,5 +4,5 @@ block aside
 block content
  div(id="divContentLista" )
   include ../tecBioq/inputSearch.pug
-  +inputSearch(`/admins2`,"nombre/email/DNI a buscar","",`http://localhost:3000/admins2/form?rol=${encodeURIComponent(rol)}`)
+  +inputSearch(`/admins2`,"nombre/email/DNI a buscar")
   include ./listaUsuarios.pug
