--- a/views/administrador2/clickUsuario.pug
+++ b/views/administrador2/clickUsuario.pug
@@ -1,106 +1,105 @@
 extends layout
 append styles 
       link(rel='stylesheet', href='/stylesheets/admins2/clickUsuario.css')
+      link(rel='stylesheet', href='/stylesheets/tecBioq/listaUsuario.css')
+include ./modalEliminar       
+block aside 
+    include ./menuLateralClickUsuario.pug
 block content
-    - editatUsuario=true
-    include ../listaDatosUsuarios
-    +formUsuario(usuario)
-    if rolesArray.includes('Paciente')
-     - editarPaciente=true
-     +formPaciente(usuario.Paciente,usuario.id)
-    if rolesArray.includes('Bioquímico')
-     - editarBioquimico=true
-     +formBioquimico(usuario.Bioquimico,usuario.id)
-    .container(id="divLista")
+  #divContentLista
+     include ../listaDatosUsuarios
+     - oculto=true
+     +formUsuario(usuario,true)
+     +formPaciente(usuario.Paciente,usuario.id,true)
+     +formBioquimico(usuario.Bioquimico,usuario.id,true)
+     +formTecnico(usuario.Tecnico,usuario.id,true)
+     - console.log("usuario")
+     - console.log(usuario)
      if rta
       div(class=`alert alert-${rta.alertType} alert-dismissible fade show` role="alert")
        strong 
            | #{rta.alertMessage}
        button(type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close")
-     ul(class=`list-group list-group-flush lista-datos-usuario`)
-         li(class="list-group-item")= `Nombre: `+usuario.nombre  
-         li(class="list-group-item") Apellido: 
-             span= usuario.apellido 
-         li(class="list-group-item") Documento:
-             span= usuario.documento
-         li(class="list-group-item") Email:
-             span= usuario.email
-         li(class="list-group-item") Telefono:
-             span= telefonos[0].numero
-         li(class="list-group-item") Roles:
-             span= rolesString
-     .row-m3
-        .col-6(id="colBtnInicioUsuario")         
-            button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnEditarUsuario') Editar datos de usuario
-     if rolesArray.includes('Paciente')
+     #divLista
+      div(class='div-usuario')
+       h3(class="titulo-lista") Usuario 
+       ul(class=`list-group list-group-flush lista-datos-usuario ${usuario.deletedAt?"lista-datos-usuarioEliminado":""}`)
+           li(class="list-group-item")= `Nombre: `+usuario.nombre  
+           li(class="list-group-item") Apellido: 
+               span= usuario.apellido 
+           li(class="list-group-item") Documento:
+               span= usuario.documento
+           li(class="list-group-item") Email:
+               span= usuario.email
+           li(class="list-group-item") Telefono:
+               span= telefonos[0].numero
+           li(class="list-group-item") Roles:
+               span= rolesString
+       .row
+          if !usuario.deletedAt
+           .col-5(id="colBtnInicioUsuario")         
+               button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnEditarUsuario') Editar
+          .col-1()        
+           form(action=`/admins2/${usuario.id}/usuario?_method=patch` method="post")
+            button(type="submit" class="btn btn-secondary w-10 py-2 btnEliminar")
+             if usuario.deletedAt 
+              | Activar
+             else 
+              | Desactivar 
+
+
+
       if usuario.Paciente
-       +listaDatosPaciente(usuario.Paciente)
-       .row-m3
-        .col-6(id="colBtnInicioPaciente")        
-            button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnEditarPaciente') Editar datos de paciente 
-     if rolesArray.includes('Bioquímico')
-       +listaDatosBioquimico(usuario.Bioquimico)  
-       .row-m3
-        .col-6(id="colBtnInicioBioquimico")        
-            button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnEditarBioquimico') 
-              | Editar datos de bioquímico
+       div(class='div-usuario')
+        h3(class="titulo-lista") Paciente
+        +listaDatosPaciente(usuario.Paciente)
+        .row
+         if !usuario.Paciente.deletedAt
+          .col-5(id="colBtnInicioPaciente")        
+           button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnEditarPaciente') Editar 
+         .col-1()        
+          form(action=`/admins2/${usuario.id}/paciente?_method=patch` method="post")
+           button(type="submit" class="btn btn-secondary w-10 py-2 btnEliminar")
+            if usuario.Paciente.deletedAt 
+             | Activar
+            else 
+             | Desactivar 
+          
+
+
+      if usuario.Bioquimico
+       div(class='div-usuario')
+        h3(class="titulo-lista") Bioquímico
+        +listaDatosBioquimico(usuario.Bioquimico)  
+        .row
+         if !usuario.Bioquimico.deletedAt
+          .col-5(id="colBtnInicioBioquimico")        
+           button(type="button" class="btn btn-secondary w-100 py-2 btnEditar" id='btnEditarBioquimico') Editar
+         .col-1() 
+          form(action=`/admins2/${usuario.id}/bioquimico?_method=patch` method="post")
+           button(type="submit" class="btn btn-secondary w-10 py-2 btnEliminar")
+            if usuario.Bioquimico.deletedAt 
+             | Activar
+            else 
+             | Desactivar
+      
+      
+      
+      if usuario.Tecnico
+       div(class='div-usuario')
+        h3(class="titulo-lista") Técnico 
+        .row
+         if !usuario.Tecnico.deletedAt
+         .col-1() 
+          form(action=`/admins2/${usuario.id}/tecnico?_method=patch` method="post")
+           button(type="submit" class="btn btn-secondary w-10 py-2 btnEliminar")
+            if usuario.Tecnico.deletedAt 
+             | Activar
+            else 
+             | Desactivar
+
+
      script(src="/javascripts/errores.js")  
-     script.
-        const divForm1=document.getElementById('divForm1');
-        const divForm2=document.getElementById('divForm2');
-        const divForm3=document.getElementById('divForm3');
-        const divRegresarForm1=document.getElementById('divRegresarForm1');
-        const divRegresarForm2=document.getElementById('divRegresarForm2');
-        const divRegresarForm3=document.getElementById('divRegresarForm3');
-        const divLista=document.getElementById('divLista');
-        const colBtnInicioPaciente=document.getElementById('colBtnInicioPaciente');
-        const colBtnInicioUsuario=document.getElementById('colBtnInicioUsuario');
-        const colBtnInicioBioquimico=document.getElementById('colBtnInicioBioquimico');
-
-        const btnEditar=document.querySelectorAll('.btnEditar');
-        for(let btn of btnEditar){
-               btn.addEventListener('click',()=>{
-                   divLista.classList.toggle('oculto');
-               })
-
-               switch(btn.id){
-                case 'btnEditarUsuario': 
-                    btn.addEventListener('click',()=>{ 
-                   divForm1.classList.toggle('oculto');
-                   if (!divForm1.classList.contains('oculto')) {
-                     divRegresarForm1.appendChild(btn)
-                   btn.textContent="Volver"
-                   }else{
-                     colBtnInicioUsuario.appendChild(btn)
-                      btn.textContent="Editar datos de usuario"
-                   }
-                   })
-                   
-                   break;
-                case 'btnEditarPaciente': 
-                   btn.addEventListener('click',()=>{ 
-                   divForm2.classList.toggle('oculto');
-                    if (!divForm2.classList.contains('oculto')) {
-                     divRegresarForm2.appendChild(btn)
-                   btn.textContent="Volver"
-                   }else{
-                     colBtnInicioPaciente.appendChild(btn)
-                      btn.textContent="Editar datos de paciente"
-                   }
-                   })
-                   break;
-                case 'btnEditarBioquimico':
-                 btn.addEventListener('click',()=>{  
-                   divForm3.classList.toggle('oculto');
-                    if (!divForm3.classList.contains('oculto')) {
-                     divRegresarForm3.appendChild(btn)
-                   btn.textContent="Volver"
-                   }else{
-                     colBtnInicioBioquimico.appendChild(btn)
-                      btn.textContent="Editar datos de bioquímico"
-                   }
-                   })
-                   break;
-               }
-
-        }
+     script(src="/javascripts/admins2/clickUsuario.js")  
+     
+        
